syntax = "proto3";

package gothic.api;

option go_package = "github.com/jrapoport/gothic/api/grpc/rpc;api";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

message UserResponse {
  string user_id = 1;
  string role = 2;
  string email = 3;
  string username = 4;
  google.protobuf.Struct data = 5;
  optional BearerResponse token = 6;
}

message BearerResponse {
  string type = 1;
  string access = 2;
  string refresh = 3;
  string id = 4;
  google.protobuf.Timestamp expires_at = 5;
}

message PagedResponse {
  int64 index = 1;
  int64 size = 2;
  int64 first = 3;
  int64 prev = 4;
  int64 next = 5;
  int64 last = 6;
  int64 count = 7;
  uint64 total = 8;
}
